send processed and original frames separately
